--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
   },
   "jest": {
     "rootDir": "src",
-    "scriptPreprocessor": "../jest-preprocessor.js"
+    "scriptPreprocessor": "../node_modules/babel-jest",
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "es6"
+    ]
   },
   "dependencies": {
     "es6-promise": "^2.0.0",
@@ -34,15 +43,20 @@
     "object-assign": "^1.0.0"
   },
   "devDependencies": {
+    "babel": "^5.8.23",
+    "babel-core": "^5.8.25",
+    "babel-jest": "^5.3.0",
     "browserify": "^5.9.1",
     "del": "^0.1.2",
     "envify": "^3.2.0",
+    "fbjs": "^0.3.2",
     "gulp": "^3.8.6",
     "gulp-babel": "^4.0.0",
     "gulp-jscs-custom": "^0.1.2",
     "gulp-replace": "^0.4.0",
-    "jest-cli": "^0.4.0",
-    "react": "^0.13.1",
+    "jest-cli": "^0.5.10",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "vinyl-source-stream": "^0.1.1"
   }
 }
